<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FootGolf Caddie</string>
    <string name="action_switch_layout">Switch Layout</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_course">Add Course</string>
    <string name="action_remove_course">Remove Course</string>
    <string name="action_share_course">Share Course</string>
    <string name="action_rename_course">Rename Course</string>
    <string name="action_edit_hole">Edit Hole</string>
    <string name="action_take_picture">Take Picture</string>
    <string name="action_draw_picture">Draw Picture</string>
    <string name="action_remove_shot">Remove Shot</string>
    <string name="action_edit_shot">Edit Shot</string>
    <string name="action_home_button">Home</string>

    <string name="action_browse_courses_show_view">Browse Shared Courses for Download</string>

    <string name="course_notes_title">Course Notes</string>
    <string name="course_browser_title">Course Browser</string>
    <string name="course_holes_title">Holes</string>
    <string name="rules_title">Rules</string>
    <string name="obstructions_title">Obstructions</string>
    <string name="calendar_title">Calendar</string>
    <string name="message_board_title">Message Board</string>
    <string name="camera_title">Camera</string>
    <string name="draw_title">Draw</string>
    <string name="shot_title">Shot</string>

    <string name="hole_title">Hole</string>

    <string name="test_message">test message</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="new_course">New Course</string>

    <string name="course_name">Course Name</string>
    <string name="holes">Holes</string>

    <string name="password">Password</string>
    <string name="tag">Tag</string>

    <string name="force_upload">Course already exists on server. Would you like to overwrite?</string>

    <string name="settings_title">Settings</string>
    <string name="user_name">User Name</string>

    <string name="default_label">default</string>

    <string name="par">Par</string>
    <string name="distance">Distance</string>

    <string name="no_photos_message">no photos</string>
    <string name="take_photo">Take Photo</string>

    <string name="rename_course_message">Rename Course</string>
    <string name="course_name_message">Name</string>
    <string name="course_color_message">Color</string>

    <string name="hole_note">Hole Note:</string>

    <string name="confirm_delete_course_message">This will DELETE the Course. Are you sure?</string>
    <string name="confirm_delete_shot_message">This will DELETE the Shot. Are you sure?</string>
    <string name="confirm_share_course_message">Upload this Course for sharing.</string>
    <string name="share_course_failed_message">Course upload failed.</string>

    <string name="upload_course_json_pending_message">Uploading course json please wait...</string>
    <string name="upload_course_images_pending_message">Uploading course images please wait...</string>

    <string name="upload_course_json_success_message">Course json upload succeeded.</string>
    <string name="upload_course_images_success_message">Course images upload succeeded.</string>

    <string name="upload_course_json_failed_message">Course json upload failed.</string>
    <string name="upload_course_images_failed_message">Course images upload failed.</string>


    <string name="download_course_json_pending_message">Downloading course images please wait...</string>
    <string name="download_course_images_pending_message">Downloading course images please wait...</string>
    <string name="download_course_json_success_message">Course json download succeeded.</string>
    <string name="download_course_images_success_message">Course images download succeeded.</string>

    <string name="tab_public">Public</string>
    <string name="tab_private">Private</string>

</resources>