<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homePageFragment">

    <fragment
        android:id="@+id/homePageFragment"
        android:name="com.kylearon.fgcaddie.HomePageFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homePageFragment_to_courseNotesPageFragment"
            app:destination="@id/courseNotesPageFragment" />
        <action
            android:id="@+id/action_homePageFragment_to_calendarPageFragment"
            app:destination="@id/calendarPageFragment" />
        <action
            android:id="@+id/action_homePageFragment_to_messageBoardPageFragment"
            app:destination="@id/messageBoardPageFragment" />
    </fragment>

    <fragment
        android:id="@+id/courseNotesPageFragment"
        android:name="com.kylearon.fgcaddie.coursenotes.CourseNotesPageFragment"
        android:label="@string/course_notes_title">
        <action
            android:id="@+id/action_courseNotesPageFragment_to_courseHolesPageFragment"
            app:destination="@id/courseHolesPageFragment" />
    </fragment>

    <fragment
        android:id="@+id/courseHolesPageFragment"
        android:name="com.kylearon.fgcaddie.courseholes.CourseHolesPageFragment"
        android:label="@string/course_holes_title">
        <argument
            android:name="courseid"
            app:argType="string" />
        <action
            android:id="@+id/action_courseHolesPageFragment_to_courseNotesPageFragment"
            app:destination="@id/courseNotesPageFragment"
            app:popUpTo="@id/courseNotesPageFragment"
            app:popUpToInclusive="false"
            />
        <action
            android:id="@+id/action_courseHolesPageFragment_to_holePageFragment"
            app:destination="@id/holePageFragment" />
    </fragment>

    <fragment
        android:id="@+id/holePageFragment"
        android:name="com.kylearon.fgcaddie.hole.HolePageFragment"
        android:label="@string/hole_title">
        <argument
            android:name="hole"
            app:argType="string" />
        <action
            android:id="@+id/action_holePageFragment_self"
            app:destination="@id/holePageFragment"
            app:popUpTo="@id/holePageFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_holePageFragment_to_cameraPageFragment"
            app:destination="@id/cameraPageFragment" />
        <action
            android:id="@+id/action_holePageFragment_to_shotPageFragment"
            app:destination="@id/shotPageFragment" />
    </fragment>

    <fragment
        android:id="@+id/cameraPageFragment"
        android:name="com.kylearon.fgcaddie.camera.CameraPageFragment"
        android:label="@string/camera_title">
        <argument
            android:name="hole"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/shotPageFragment"
        android:name="com.kylearon.fgcaddie.shot.ShotPageFragment"
        android:label="@string/shot_title">
        <argument
            android:name="shot"
            app:argType="string" />
        <argument
            android:name="hole"
            app:argType="string" />
        <action
            android:id="@+id/action_shotPageFragment_to_holePageFragment"
            app:destination="@id/holePageFragment"
            app:popUpTo="@id/holePageFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/calendarPageFragment"
        android:name="com.kylearon.fgcaddie.calendar.CalendarPageFragment"
        android:label="@string/calendar_title">
    </fragment>

    <fragment
        android:id="@+id/messageBoardPageFragment"
        android:name="com.kylearon.fgcaddie.messageboard.MessageBoardPageFragment"
        android:label="@string/message_board_title">
    </fragment>
</navigation>