<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".courseholes.ShareCourseDialogFragment">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/confirm_share_course_message"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0dp"
        android:paddingRight="4dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="80dp"
            android:layout_width="120dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/tag"
            />

        <EditText
            android:id="@+id/course_tag_input"
            android:layout_height="60dp"
            android:layout_width="200dp"
            android:textSize="14sp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0dp"
        android:paddingRight="4dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="80dp"
            android:layout_width="120dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/password"
            />

        <EditText
            android:id="@+id/course_password_input"
            android:layout_height="60dp"
            android:layout_width="200dp"
            android:textSize="14sp"
            android:inputType="text"/>

    </LinearLayout>


</LinearLayout>

